--- a/api/blog/models/blog.settings.json
+++ b/api/blog/models/blog.settings.json
@@ -15,12 +15,8 @@
       "type": "string",
       "required": true
     },
-    "slug": {
-      "type": "string",
-      "required": true
-    },
     "image": {
-      "collection": "file",
+      "model": "file",
       "via": "related",
       "allowedTypes": [
         "files",
@@ -29,6 +25,32 @@
       ],
       "plugin": "upload",
       "required": true
+    },
+    "content": {
+      "type": "richtext",
+      "required": true
+    },
+    "slug": {
+      "type": "uid",
+      "targetField": "title",
+      "required": true
+    },
+    "category": {
+      "type": "enumeration",
+      "enum": [
+        "Gatsby",
+        "JavaScript",
+        "ReactJS",
+        "HTML"
+      ],
+      "required": true
+    },
+    "desc": {
+      "type": "text",
+      "required": true
+    },
+    "date": {
+      "type": "date"
     }
   }
 }
